# src/routes/index.ts
@@ -1,2 +1,3 @@
-export { router as healthRouter } from './health';
-export { router as calculatorRouter } from './calculator';
+export { router as healthRouter } from "./health";
+export { router as calculatorRouter } from "./calculator";
+export { router as apiDocsRouter } from "./apiDocs";
