# src/types/calculator.ts
@@ -3,8 +3,8 @@ import { components } from "../schemas";
 export type CalculatorCommandDto = components["schemas"]["CalculatorCommand"];
 
 export type CalculatorResultDto = components["schemas"]["CalculatorResult"];
-// export interface CalculatorRequestBody {
-//   operator: '+' | '-' | '*' | '/';
-//   operand1: number;
-//   operand2: number;
-// }
+export interface CalculatorRequestBody {
+  operator: "+" | "-" | "*" | "/";
+  operand1: number;
+  operand2: number;
+}
